[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/SpaceConstructions/0033SpaceStation.png" type="Texture" id=1]
[ext_resource path="res://src/SpaceConstructions/SpaceStation.gd" type="Script" id=2]
[ext_resource path="res://src/Menus/StationMenu.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 203.662

[sub_resource type="CircleShape2D" id=3]
radius = 866.752

[sub_resource type="CircleShape2D" id=4]

[node name="SpaceStation" type="Node2D" groups=["station"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="DockingPort" type="Position2D" parent="Sprite"]
position = Vector2( 96, -95 )

[node name="DockingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DockingArea"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="DockingArea"]
wait_time = 3.0

[node name="LaserCoverage" type="Area2D" parent="."]
collision_mask = 257

[node name="CollisionShape2D" type="CollisionShape2D" parent="LaserCoverage"]
shape = SubResource( 3 )

[node name="StationMenu" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 256.0
margin_top = -148.0
margin_right = 256.0
margin_bottom = -148.0

[node name="DockingTween" type="Tween" parent="."]

[node name="RadarDetector" type="KinematicBody2D" parent="." groups=["station"]]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RadarDetector"]
shape = SubResource( 4 )

[connection signal="area_entered" from="DockingArea" to="." method="_on_DockingArea_area_entered"]
[connection signal="area_exited" from="DockingArea" to="." method="_on_DockingArea_area_exited"]
[connection signal="body_entered" from="DockingArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DockingArea" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="DockingArea/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="LaserCoverage" to="." method="_on_LaserCoverage_body_entered"]
[connection signal="body_exited" from="LaserCoverage" to="." method="_on_LaserCoverage_body_exited"]
[connection signal="tween_all_completed" from="DockingTween" to="." method="_on_DockingTween_tween_all_completed"]
